--- a/video-button/index.html
+++ b/video-button/index.html
@@ -1,33 +1,52 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <!-- OTHER META TAGS -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- WEBSITE TITLE -->
-    <title>Button with Video Background</title>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- WEBSITE DESCRIPTION -->
-    <meta name="description" content="This is my cool website!" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <!-- FAVICON -->
-    <link rel="shortcut icon" type="image/jpg" href="/path/to/your/favicon/" />
+  <!-- WEBSITE TITLE -->
+  <title>Button with Video Background</title>
 
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <!-- *currently set to "Roboto". Feel free to change it to whatever you like* -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+  <!-- WEBSITE DESCRIPTION -->
+  <meta name="description" content="This is my cool website!" />
 
-    <!-- CSS STYLE LINK -->
-    <link rel="stylesheet" href="./styles/main.css" />
-  </head>
-  <body>
-    <!-- WEBSITE CONTENT GOES HERE -->
-    <h1>hola</h1>
-  
-  </body>
+  <!-- FAVICON -->
+  <link rel="shortcut icon" type="image/jpg" href="/path/to/your/favicon/" />
+
+  <!-- CSS STYLE LINK -->
+  <link rel="stylesheet" href="./styles/main.css" />
+</head>
+
+<body>
+
+
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-3">
+        <div class="video-container">
+          <video autoplay muted loop>
+            <source src="https://vod-bgc-eu-west-1.media.dssott.com/bgui/ps01/disney/bgui/2019/08/01/1564676115-marvel.mp4" type="video/mp4" />
+          </video>
+          <div class="caption">
+            <img class="logotipo"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/2560px-Marvel_Logo.svg.png"
+            alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+</body>
+
 </html>
